fix(SkillCard): fixes paint-order not working properly on Safari

--- a/components/sections/Skills/SkillCard/SkillCard.module.css
+++ b/components/sections/Skills/SkillCard/SkillCard.module.css
@@ -70,10 +70,6 @@
   width: 40px;
 }
 
-.image > svg {
-  paint-order: stroke;
-}
-
 .large .image {
   width: 80px;
 }
